# PPmatrix

./: CMakeLists.txt  CMakeSettings.json  README.md  examples.md  reference.md
PPmatrix/: CMakeLists.txt  PP.hpp  PPmatrix.hpp  accumulate.hpp  augmented_matrix_view.hpp  compressed_pair.hpp  copy.hpp  default_element.hpp  dynamic_matrix.hpp  equal.hpp  execute.hpp  fill.hpp  find.hpp  functor.hpp  inner_product.hpp  iterator.hpp  main.cpp  matrix_view.hpp  max_element.hpp  next.hpp  nonvoid.hpp  number_width.hpp  operations.hpp  operators.hpp  prev.hpp  rational.hpp  same.hpp  shift_view.hpp  simple_matrix_view.hpp  simple_view.hpp  skip_view.hpp  static_matrix.hpp  static_view.hpp  swap_ranges.hpp  take_view.hpp  transform_view.hpp  traverse.hpp  unbounded.hpp  unbounded_sentinel_t.hpp  view.hpp  (+2 more)
documentation/: main.md
